# Smart-Bees

./: .gitignore  DbHandler.py  MQTT.h  README.md  Server.py  now.json  reflash.sh
Alice Skill Server/: Dockerfile  docker-compose.yml
Alice Skill Server/src/: GateProcessor.py  index.py
Gate/: CMakeLists.txt  Makefile  README.md  stop_gate.sh
Gate/log/: log.txt
Gate/src/: AliceConnector.cpp  AliceConnector.h  CMakeLists.txt  FindMosquitto.cmake  LogPrinter.cpp  LogPrinter.h  MQTTPublisher.cpp  MQTTPublisher.h  PhotonConfigReader.cpp  PhotonConfigReader.h  TokenHandler.cpp  TokenHandler.h  main.cpp
Gate/test/src/: AliceConnectorTest_Receiver.cpp  TokenHandlerTest.cpp
GoogleAssistant/: action.json  app.py
Micro-services/: .dockerignore
Micro-services/Active-Connections-Service/: .gitignore  CMakeLists.txt  Dockerfile  README.md  config.txt  docker-compose.yml  stop.sh
Micro-services/Active-Connections-Service/src/: CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  main.cpp
Micro-services/Active-Connections-Service/src/ConnectionManager/: CMakeLists.txt  ConnectionManager.cpp  ConnectionManager.h
Micro-services/Active-Connections-Service/src/RequestHandlers/CheckConnectionRequestHandler/: CMakeLists.txt  CheckConnectionRequestHandler.cpp  CheckConnectionRequestHandler.h
Micro-services/Active-Connections-Service/src/RequestHandlers/RequestHandlerBase/: CMakeLists.txt  RequestHandlerBase.cpp  RequestHandlerBase.h
Micro-services/Active-Connections-Service/src/RequestHandlers/SendCommandRequestHandler/: CMakeLists.txt  SendCommandRequestHandler.cpp  SendCommandRequestHandler.h
Micro-services/Alice-Interface-Service/: Dockerfile  README.md  docker-compose.yml
Micro-services/Alice-Interface-Service/src/: index.py
Micro-services/Alice-Interface-Service/test/: GateProcessorTest.py
Micro-services/Example-Service/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
Micro-services/Example-Service/database/: init.sql
Micro-services/Example-Service/src/: CMakeLists.txt  main.cpp
Micro-services/Manager-Service/: .gitignore  Dockerfile  config.txt  docker-compose.yml  stop.sh
Micro-services/Manager-Service/log/: log.txt
Micro-services/Manager-Service/src/: CMakeLists.txt  main.cpp
Micro-services/Subscribe-Service/: .gitignore  CMakeLists.txt  Dockerfile  config.txt  docker-compose.yml  stop.sh
Micro-services/Subscribe-Service/db_dir/: init.sql
Micro-services/Subscribe-Service/src/: CMakeLists.txt  main.cpp
Micro-services/Subscribe-Service/src/database/: CMakeLists.txt  database.cpp  database.h
Micro-services/Subscribe-Service/src/libs/database/: database.cpp  database.h
Micro-services/Time-Event-Service/: CMakeLists.txt
Micro-services/Time-Event-Service/src/: CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  EventManager.cpp  EventManager.h  main.cpp
Micro-services/Time-Event-Service/src/RequestHandlers/: CMakeLists.txt  DeleteRequestHandler.cpp  DeleteRequestHandler.h  GetRequestHandler.cpp  GetRequestHandler.h  PostRequestHandler.cpp  PostRequestHandler.h  RequestHandlerBase.cpp  RequestHandlerBase.h
Micro-services/libs/ConfigReader/: CMakeLists.txt  ConfigReader.h
Micro-services/libs/HTTPClient/: CMakeLists.txt  Client  Client.cpp  HTTPClient.cpp  HTTPClient.h  Server  Server.cpp  serv1  serv1.cpp  tempCodeRunnerFile  tempCodeRunnerFile.cpp
Micro-services/libs/HTTPClient/test/: CMakeLists.txt  client.cpp  server.cpp
Micro-services/libs/HTTPHandler/: CMakeLists.txt  HTTPHandler.cpp  HTTPHandler.h
Micro-services/libs/HTTPHandler/test/: main.cpp  (+1 more)
Micro-services/libs/HTTPServer/: CMakeLists.txt  HTTPServer.cpp  HTTPServer.h
Micro-services/libs/Logger/: CMakeLists.txt  Logger.cpp  Logger.h
Micro-services/libs/SimpleSQL/: CMakeLists.txt  SimpleSQL.cpp  SimpleSQL.h
Micro-services/libs/SimpleSQL/test/: CMakeLists.txt  main.cpp
Micro-services/manager_service/: CMakeLists.txt
Micro-services/manager_service/src/: CMakeLists.txt  main.cpp
Micro-services/server/src/: CMakeLists.txt  a.out  client.cpp  main  main.cpp  prototype.cpp  server.cpp  server.h  test.cpp
Micro-services/server/src/.trash/: a.out
Micro-services/subscribe_service/: .gitignore  stop.sh
Micro-services/subscribe_service/src/: CMakeLists.txt  a.out  database.cpp  main.cpp  server.cpp  server.h
Micro-services/subscribe_service/src/.trash/: Makefile  database.cppCOPY  test.cpp
Micro-services/subscribe_service/src/libs/database/: CMakeLists.txt  database.cpp  database.h
Micro-services/subscribe_service/src/libs/server/: CMakeLists.txt
Micro-services/test_folder/json_test/: CMakeLists.txt  a.out  main.cpp
Micro-services/test_folder/static_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp  test.cpp  test.h
Photon/: MQTT.cpp  main.ino  reflash.sh
Raspberry Pi/Gate/: .gitignore  Dockerfile  config.txt  docker-compose.yml  photon.conf  stop_gate.sh  token.base
Raspberry Pi/Gate/src/: AliceConnector.cpp  AliceConnector.h  CMakeLists.txt  MQTTPublisher.cpp  MQTTPublisher.h  PhotonConfigReader.cpp  PhotonConfigReader.h  TokenHandler.cpp  main.cpp
Raspberry Pi/Gate/src/ConfigReader/: ConfigReader.cpp
Smart Lamp/: SmartLamp.ino
SmartLamp/: SmartLamp.ino
Website/: Dockerfile  docker-compose.yml
Website/binding/: apps.py  models.py  urls.py  views.py  web_form.py
Website/binding/migrations/: 0001_initial.py  0002_auto_20190929_2321.py
Website/templates/: binding.html  config_editor.html  gate_already_bind.html  gate_not_found.html  subscription.html  subscription.js  success.html  wrapper.html
Website/website/: settings.py  urls.py
Wemos D1 mini/Bee-Firmware/: Bee-Firmware.ino
Wemos D1 mini/main/: main.ino
database/: create_gate_uid.sql
src/: AliceConnector.cpp  DbHandler.py  GateProcessor.py  LogPrinter.cpp  LogPrinter.h  MQTTPublisher.cpp  MQTTPublisher.h  Server.py  TokenHandler.cpp  TokenHandler.h  index.py  main.cpp
static/: example.html
test/: MQTTPublisherTest.cpp  Makefile
test/src/: AliceConnectorTest_Receiver.cpp  AliceConnectorTest_Server.cpp
(+12 files in other folders)
